@@ -1591,11 +1591,20 @@
     </version>
    </module>
   <module name="guikachu">
+    <version release="gnome-1.4">
+      <component name="guikachu" dir="guikachu" group="extras">
+        <podir dir="po"/>
+	<potname name="guikachu.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
     <version release="gnome-2.2">
       <component name="guikachu" dir="guikachu" group="extras">
 	<podir dir="po"/>
 	<potname name="guikachu.pot"/>
-	<branch name="HEAD"/>
+	<branch name="guikachu-gnome-2-branch"/>
 	<regenerate/>
 	<download/>
       </component>
