@@ -1,5 +1,9 @@
 2003-02-20  Carlos Perelló Marín <carlos@gnome.org>
 
+	* translation.xml: Readded GNOME 1.4 guikachu
+
+2003-02-20  Carlos Perelló Marín <carlos@gnome.org>
+
 	* translation.xml: Moved ggv && gnome-themes to desktop group.
 
 2003-02-20  Carlos Perelló Marín <carlos@gnome.org>
